# claude-code-python

./: .gitignore  AGENT.MD  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  __init__.py  pyproject.toml  pytest.ini  requirements.txt  run.py  setup.py
claude_code/: __init__.py  app.py  config.py  features.py  graph.py  main.py  permissions.py  remote.py  session.py
docs/: ARCHITECTURE_REVIEW.md  FIX_PROPOSALS.md  MCP.md  MIDDLEWARE_EVOLUTION_ASSESSMENT_2026-04-16.md  MIDDLEWARE_EVOLUTION_EXECUTION_2026-04-16.md  PERFORMANCE_TOP_TIER_EVALUATION_PLAN.md  README.md
examples/: basic_usage.py  configuration.py  custom_tools.py  mcp_integration.py  session_management.py
scripts/: check_syntax.py  run_linux_unified_gate.py  run_p1_active_memory_gate.py  run_p1_cli_thin_client_gate.py  run_p1_control_plane_gate.py  run_p1_event_journal_gate.py  run_p1_hook_permission_audit_gate.py  run_p1_sqlite_state_backend_gate.py  run_p2_agent_runtime_parity_gate.py  run_p2_artifact_bus_gate.py  run_p2_custom_agents_loader_gate.py  run_p2_github_ci_workflow_gate.py  run_p2_ide_integration_gate.py  run_p2_jetbrains_ide_integration_gate.py  run_p2_linux_ci_matrix_gate.py  run_p2_linux_ci_workflow_command_guard_gate.py  run_p2_linux_ci_workflow_decision_gate.py  run_p2_linux_ci_workflow_dispatch_completion_gate.py  run_p2_linux_ci_workflow_dispatch_execution_gate.py  run_p2_linux_ci_workflow_dispatch_gate.py  run_p2_linux_ci_workflow_dispatch_trace_gate.py  run_p2_linux_ci_workflow_governance_gate.py  run_p2_linux_ci_workflow_governance_publish_gate.py  run_p2_linux_ci_workflow_plan_gate.py  (+61 more)
(+356 files in other folders)
